<resources>
    <string name="app_name">Alibi</string>
    <string name="nama_pemohon">Nama Pemohon</string>
    <string name="alamat_pemohon">Alamat Pemohon</string>
    <string name="nama_sarana">Nama Sarana</string>
    <string name="alamat_sarana">Alamat Sarana</string>
    <string name="lanjut">Lanjut</string>
    <string name="identitas">Identitas</string>
    <string name="bangunan">Bangunan (Bagian dari)</string>
    <string name="rumah">Rumah</string>
    <string name="kantor">Kantor</string>
    <string name="gedung">Gedung</string>
    <string name="ruangan_fasilitas">Ruangan Fasilitas</string>
    <string name="r_tunggu">Ruang Tunggu</string>
    <string name="r_periksa">Ruang Periksa</string>
    <string name="r_bersalin">Ruang Bersalin</string>
    <string name="r_nifas">Ruang Nifas</string>
    <string name="r_kamar_mandi">Ruang WC dan Kamar Mandi</string>
    <string name="r_lainnya">Ruang Lainnya</string>
    <string name="prasarana">Prasarana</string>
    <string name="air_bersih">Air Bersih</string>
    <string name="kelistrikan">Kelistrikan dan Pencahayaan</string>
    <string name="sirkulasi_udara">Sirkulasi Udara</string>
    <string name="lainnya">Lainnya</string>
    <string name="prasarana_lainnya">Prasarana Lainnya</string>
    <string name="kursi_kerja">Kursi Kerja</string>
    <string name="lemari_arsip">Lemari Arsip</string>
    <string name="meja_tulis">Meja Tulis</string>
    <string name="tempat_tidur_periksa">Tempat Tidur Periksa</string>
    <string name="tempat_tidur_bersalin">Tempat Tidur Bersalin</string>
    <string name="tempat_tidur_nifas">Tempat Tidur Nifas</string>
    <string name="meubelair">Meubelair</string>
    <string name="kesehatan_ibu_kb">Kesehatan Ibu dan KB</string>
    <string name="buku_kia">Buku KIA</string>
    <string name="buku_kohort_ibu">Buku Kohort Ibu</string>
    <string name="kartu_ibu">Kartu Ibu</string>
    <string name="buku_register_ibu">Buku Register Ibu</string>
    <string name="pencatatan_asuhan">Pencatatan Asuhan Kebidanan</string>
    <string name="formulir_informed">Formulir Informed Consent</string>
    <string name="formulir_laporan">Formulir Laporan</string>
    <string name="formulir_rujukan">Formulir Rujukan</string>
    <string name="surat_keterangan_hamil">Surat Keterangan Hamil</string>
    <string name="formulir_lainnya">Formulir dan Surat Lainnya</string>
    <string name="kesehatan_anak">Kesehatan Anak</string>
    <string name="bagan_dinding_mtbs">Bagan Dinding MTBS</string>
    <string name="bagan_mtbs">Bagan MTBS</string>
    <string name="buku_register_bayi">Buku Register Bayi</string>
    <string name="formulir_ddtka">Formulir Deteksi Dini Tumbuh Kembang Anak</string>
    <string name="formulir_kpsp">Formulir Kuesioner Pra Skrining Perkembangan (KPSP)</string>
    <string name="formulir_rekapitulasi">Formulir Rekapitulasi Laporan Kesehatan Bayi</string>
    <string name="register_kohort_bayi">Register Kohort Bayi</string>
    <string name="imunisasi">Imunisasi</string>
    <string name="persalinan">Persalinan</string>
    <string name="informed_consent">Informed Consent</string>
    <string name="kantong_persalinan">Kantong Persalinan</string>
    <string name="formulir_partograf">Formulir Partograf</string>
    <string name="formulir_persalinan">Formuli Persalinan / Nifas dan KB</string>
    <string name="formulir_surat_kelahiran">Formulir Surat Kelahiran</string>
    <string name="pog">Set Pemeriksaan Obstetri dan Gynekolog</string>
    <string name="peralatan_bidt">Bak instrumen dengan tutup</string>
    <string name="peralatan_bltasb">Baki logam tempat alat steril bertutup</string>
    <string name="peralatan_pr">Palu refleks</string>
    <string name="peralatan_pl">Pen Lancet</string>
    <string name="peralatan_sd">Sphygmomanometer Dewasa</string>
    <string name="peralatan_sd2">Stetoskop Dewasa</string>
    <string name="peralatan_sl">Sudip lidah</string>
    <string name="peralatan_td">Termometer Dewasa</string>
    <string name="peralatan_td2">Timbangan Dewasa</string>
    <string name="peralatan_tk">Torniket Karet</string>
    <string name="peralatan_d">Doppler</string>
    <string name="peralatan_gb">Gunting Benang</string>
    <string name="peralatan_ge">Gunting Episiotomi</string>
    <string name="peralatan_gtp">Gunting Tali Pusat</string>
    <string name="peralatan_gv">Gunting Verband</string>
    <string name="peralatan_kk">Klem Kasa (Korentang)</string>
    <string name="peralatan_tkk">Tempat Klem Kasa (Korentang)</string>
    <string name="peralatan_lph">Lampu Periksa Halogen</string>
    <string name="peralatan_moknd">Masker Oksigen + Kanula Nasal Dewasa</string>
    <string name="peralatan_mi">Meja Instrumen</string>
    <string name="peralatan_nhm">Needle Holder Matheiu</string>
    <string name="peralatan_po">Pelvimeter Obstetrik</string>
    <string name="peralatan_pj">Pinset Jaringan (Sirurgis)</string>
    <string name="peralatan_pk">Pinset Kasa (Anatomis)</string>
    <string name="peralatan_pb">Pinset Bedah</string>
    <string name="peralatan_sk">Setengah Kocher</string>
    <string name="peralatan_s">Spekulum (Sims)</string>
    <string name="peralatan_scb">Spekulum Cocor Bebek</string>
    <string name="peralatan_si">Standar infus</string>
    <string name="peralatan_sd3">Stetoskop Dewasa</string>
    <string name="peralatan_sj">Stetoskop Janin/ Fetoscope</string>
    <string name="peralatan_tor">Tabung Oksigen dan Regulator</string>
    <string name="pka">Set Pemeriksaan Kesehatan Anak</string>
    <string name="pemeriksaan_appb">Alat Pengukur Panjang Bayi</string>
    <string name="pemeriksaan_lp">Lampu periksa</string>
    <string name="pemeriksaan_plk">Pengukur lingkar kepala</string>
    <string name="pemeriksaan_ptba">Pengukur tinggi badan anak</string>
    <string name="pemeriksaan_tb">Timbangan Bayi</string>
    <string name="pkb">Set Pelayanan KB</string>
    <string name="pelayanan_blktasb">Baki Logam Tempat Alat Steril Bertutup</string>
    <string name="pelayanan_ik">Implant Kit</string>
    <string name="pelayanan_iudk">IUD Kit</string>
    <string name="pelayanan_aeakdr">Aligator Ekstraktor AKDR</string>
    <string name="pelayanan_gmcvd">Gunting Mayo CVD</string>
    <string name="pelayanan_kkl">Klem Kasa Lurus (Sponge Foster Straight)</string>
    <string name="pelayanan_kpbakdr">Klem Penarik Benang AKDR</string>
    <string name="pelayanan_sus">Sonde Uterus Sims</string>
    <string name="pelayanan_ts">Tenakulum Schroeder</string>
    <string name="pelayanan_s">Scapel</string>
    <string name="pelayanan_t">Trochar</string>
    <string name="si">Set Imunisasi</string>
    <string name="imunisasi_vc">Vaccine carrier</string>
    <string name="imunisasi_vr">Vaccine Refrigerator</string>
    <string name="rb">Set Resusitasi Bayi</string>
    <string name="resusitasi_bssp">Baby Suction Pump portable</string>
    <string name="resusitasi_mrp">Meja Resusitasi dengan Pemanas (Infant Radiant Warmer)</string>
    <string name="resusitasi_pld">Penghisap Lendir DeLee (neonatus)</string>
    <string name="pl">Peralatan Lain</string>
    <string name="lain_b">Bantal</string>
    <string name="lain_cp">Celemek Plastik</string>
    <string name="lain_kg">Kacamata google</string>
    <string name="lain_pr">Penutup rambut</string>
    <string name="lain_db">Duk Bolong</string>
    <string name="lain_k">Kasur</string>
    <string name="lain_la">Lemari Alat</string>
    <string name="lain_lo">Lemari Obat</string>
    <string name="lain_m">Meteran (untuk mengukur tinggi Fundus)</string>
    <string name="lain_p">Perlak</string>
    <string name="lain_p2">Pispot</string>
    <string name="lain_ppl">Pita Pengukur Lila</string>
    <string name="lain_s">Seprei</string>
    <string name="lain_stka">Set Tumbuh Kembang Anak</string>
    <string name="lain_sump">Sikat untuk Membersihkan Peralatan</string>
    <string name="lain_tstyddipp">Tempat Sampah Tertutup yang dilengkapi dengan injakan pembuka penutup</string>
    <string name="lain_t">Tirai</string>
    <string name="lain_tk">Toples Kapas/Kasa Steril</string>
    <string name="lain_tk2">Tromol Kasa/Kain Steril</string>
    <string name="lain_wk">Waskom Kecil</string>
    <string name="lain_b2">Bengkok</string>
    <string name="lain_ptb">Pengukur Tinggi Badan (microtoise)</string>
    <string name="lain_pp">Pisau Pencukur</string>
    <string name="lain_hpn">Handuk Pembungkus Neonatus</string>
    <string name="lain_kmksun">Kantong Metode Kanguru sesuai ukuran neonatus</string>
    <string name="lain_lkp">Lemari Kecil Pasien</string>
    <string name="lain_sb">Selimut Bayi</string>
    <string name="lain_sd">Selimut Dewasa</string>
    <string name="lain_s2">Sterilisator</string>
    <string name="joyhadpmb">Jenis Obat yang harus ada di praktik mandiri bidan</string>
    <string name="harus_oi">Oksitosin inj 10 IU /mL</string>
    <string name="harus_mi">Metilergometrin inj 0,2 mg/mL</string>
    <string name="harus_msi">Magnesium sulfat inj 40% (i.v.)</string>
    <string name="harus_kgi">Kalsium glukonat inj 10%</string>
    <string name="joybadpmb">Jenis Obat yang bisa disimpan di praktik mandiri bidan</string>
    <string name="bisa_vadt">Vitamin A dosis tinggi</string>
    <string name="bisa_ttd">Tablet Tambah darah</string>
    <string name="bisa_vki">Vitamin K1 Injeksi</string>
    <string name="harus_smg">Salep mata Gentamicin</string>
    <string name="bisa_dt">Desogestrel Tablet</string>
    <string name="bisa_kdet">Kombinasi desogestrel dan etinilestradiol Tablet</string>
    <string name="bisa_klet">Kombinasi levonorgestrel dan etinilestradiol Tablet</string>
    <string name="harus_lt">Linestrenol Tablet</string>
    <string name="bisa_kcaet">Kombinasi Cyproterone acetat dan etinilestradiol Tablet</string>
    <string name="bisa_kget">Kombinasi Gestodene dan etinilestradiol Tablet</string>
    <string name="bisa_lt">Levonorgestrel Tablet</string>
    <string name="harus_kdet">Kombinasi drospirenone dan etinilestradiol tablet</string>
    <string name="bisa_kelt">Kombinasi ethynilestradiol dan lynestrenol Tablet</string>
    <string name="harus_mav">Medroxyprogesterone acetatae (DMPA) vial</string>
    <string name="bisa_kmaecv">Kombinasi Medroxyprogesterone acetate (DMPA) dan estradiol cypionate vial</string>
    <string name="bisa_lr">Levonorgestrel rods</string>
    <string name="bisa_er">Etonogestrel rods</string>
    <string name="harus_iudcta">IUD Cu T 380 A</string>
    <string name="harus_iudl">IUD Levonogestrel</string>
    <string name="bisa_k">Kondom</string>
    <string name="bmhp">Bahan Medis Habis Pakai</string>
    <string name="bmhp_a">Alkohol</string>
    <string name="bmhp_ks">Kain Steril</string>
    <string name="bmhp_cd">Cairan Desinfektan</string>
    <string name="bmhp_k">Kapas</string>
    <string name="bmhp_kns">Kasa Non Steril</string>
    <string name="bmhp_ks2">Kasa Steri</string>
    <string name="bmhp_lks">Lidi kapas Steril</string>
    <string name="sdm_p">SDM Pendukung</string>
    <string name="instrumen">Instrumen</string>
    <string name="persentase">Persentase</string>
    <string name="br">Bangunan dan Ruangan</string>
    <string name="pkikb">Pencatatan Kesehatan Ibu dan KB</string>
    <string name="pka2">Pencatatan Kesehatan Anak</string>
    <string name="pi">Pencatatan Imunisasi</string>
    <string name="pn">Pencatatan Nifas</string>
    <string name="spog">Set Pemeriksaan Obstetri dan Gynekologi</string>
    <string name="spka">Set Pemeriksaan Kesehatan Anak</string>
    <string name="spkb">Set Pelayanan KB</string>
    <string name="sop">Standar Prosedur Operasional</string>
    <string name="od">Obat yang bisa disimpan</string>
    <string name="oa">Obat yang harus ada</string>
    <string name="pb">Peralatan Bayi</string>
    <string name="srb">Set Resusitasi Bayi</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="buat_pdf">Buat PDF</string>
    <string name="pp">Pencatatan Persalinan</string>
</resources>