<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instrumen"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/persentase"
                android:gravity="end"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sdm_p"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_sdmp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/br"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_br"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/prasarana"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/pkikb"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pkikb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pka2"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_pka"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pi"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_pi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pp"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_pp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pn"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_pn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spog"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_spog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spka"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_spka"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spkb"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_spkb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/si"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_si"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/srb"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_srb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pb"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_pb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/oa"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_oa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/od"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_od"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bmhp"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_bmhp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sop"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_sop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="1"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="Total Kumulatif Pemenuhan Sarana Prasarana"/>

            <TextView
                android:id="@+id/tv_sum_persentase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="0"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_createPDF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:text="@string/buat_pdf"/>
            <Button
                android:id="@+id/btn_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:text="@string/lihat_detail"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>